# openapi

./: index.html  openapi.Sourcegraph.Latest.yaml  openapi.SourcegraphInternal.Latest.yaml  package.json  pnpm-lock.yaml  readme.md
dev/: internal.html  public.html  web-components.min.js
docs/api/: quickstart.mdx
docs/api/rest/: index.mdx
elements/: index.html
elements/internal-api/: index.html
examples/changelog-summary/: .tool-versions  README.md  bun.lockb  index.ts  package.json
examples/evals-promptfoo/: package.json  pnpm-lock.yaml  promptfooconfig.yaml
examples/prompt-evals/: .gitignore  README.md  assert_java_test.py  complete.js  generate-java-test.yaml  hello-world.yaml  log.txt  package.json  pnpm-lock.yaml  prompt.py  promptfooconfig.yaml
examples/prompt-evals/generate-test/java-mvn/: pom.xml
examples/prompt-evals/test-dir/java/: hello.java
examples/prompt-evals/test-dir/typescript/: hello.ts
examples/python-5.6-cody-client/: README.md  cody_chat.py  pyproject.toml  requirements.txt
examples/python-5.7-cody-client/: README.md  codypy.py  pyproject.toml
examples/python-openai-api-plus-webui/: README.md  api.py  index.html
examples/rust-56-cody-client/: Cargo.toml  README.md
examples/rust-56-cody-client/src/: main.rs
examples/typescript-5.7-cody-client/: .gitignore  CodyContextResponse.ts  Credentials.ts  README.md  bun.lockb  client.ts  codyContext.ts  env.example  index.ts  package.json  review.ts  search.ts  sse.ts  testme.ts
redocly/: index.html
redocly/internal-api/: index.html
scripts/: redocly.sh
(+3 files in other folders)
